overlapping bug

--- a/frontend/src/Home.css
+++ b/frontend/src/Home.css
@@ -16,6 +16,7 @@
     width: 100% !important;
     top: 0% !important;
     left: 0% !important;
+    padding-bottom: 80px !important;
 }
 
 .nav-image{
